# High_Level_Operations

./: .gitignore  CMakeLists.txt  High_Level_Operations_Main.cpp  README.md
Thread_Operations/: _IThread.h  _Thread.cpp  _Thread.h
Variable_Operations/: _Variable.cpp  _Variable.h
